2010-05-05  Peter Hurley <No e-mail available> (tiny change)

	* video/readers/jpeg.c (grub_jpeg_decode_huff_table): Loop over all
	tables. Ignore non-last ac bit.
	(grub_jpeg_decode_quan_table): Likewise.

2010-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/ieee1275/ieee1275.h (grub_ieee1275_flag): New value
	GRUB_IEEE1275_FLAG_NO_PRE1_5M_CLAIM.
	* kern/ieee1275/cmain.c (grub_ieee1275_find_options): Set
	GRUB_IEEE1275_FLAG_NO_PRE1_5M_CLAIM on qemu.
	* kern/ieee1275/init.c (grub_claim_heap): Don0t allocate below
	1.5MiB if GRUB_IEEE1275_FLAG_NO_PRE1_5M_CLAIM is set.

2010-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/ieee1275/ofconsole.c (grub_ofconsole_getkey): Fix off-by-one
	error.

2010-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/ieee1275/ofconsole.c (grub_ofconsole_readkey): Support C0 code.

2010-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* commands/parttool.c (grub_cmd_parttool): Fix #if !GRUB_NO_MODULES
	condition.

2010-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/mm.c (grub_real_malloc): Put magic and size assignment in common
	part.

2010-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/mm.c (grub_mm_init_region): Check for region size after aligning
	pointers.

2010-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/mm.c (grub_real_malloc): Fix size calculation when extra == 0.

2010-05-01  Christian Franke  <franke@computer.org>

	* util/grub-mkconfig_lib.in (make_system_path_relative_to_its_root):
	Remove broken Cygwin path conversion.
	* util/misc.c: [__CYGWIN__] Add include and define.
	[__CYGWIN__] (get_win32_path): Copy function from getroot.c, modify
	for Cygwin 1.7.
	(make_system_path_relative_to_its_root): Simplify loop, replace early
	return by break.
	[__CYGWIN__] Add conversion to win32 path.
	Include "/" case in trailing slash removal.

2010-05-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/main.c (grub_load_config): Fix copy-pasted comment.